istio/save/messageboard-app-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: messageboardapp
  labels: 
    app: messageboardapp
spec:
  selector:
    app: messageboardapp
  ports:
  - name: http
    port: 8088 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messageboardapp-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messageboardapp
  template:
    metadata:
      labels:
        app: messageboardapp
        version: v1
    spec:
      volumes:
        - name: mount-0
          hostPath:
            path: /
            type: ''  
      containers:
      - name: messageboardapp
        image: messageboard-app-v1:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8088
        args:
        - gunicorn
        - messageboardapp.wsgi:application
        - --bind
        - 0.0.0.0:8000
        resources: {}
        volumeMounts:
          - name: mount-0
            mountPath: /static
            subPath: static-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messageboardapp-v2
  labels:
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messageboardapp
  template:
    metadata:
      labels:
        app: messageboardapp
        version: v2
    spec:
      volumes:
        - name: mount-0
          hostPath:
            path: /
            type: ''  
      containers:
      - name: messageboardapp
        image: messageboard-app-v2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8088
        args:
        - gunicorn
        - messageboardapp.wsgi:application
        - --bind
        - 0.0.0.0:8000
        resources: {}
        volumeMounts:
          - name: mount-0
            mountPath: /static
            subPath: static-volume
