istio/save/messageboard_services.yaml
##################################################################################################
# MessageBoardPage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: messageboardpage
  labels:
    app: messageboardpage
    service: messageboardpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: messageboardpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messageboardpage-v1
  labels:
    app: messageboardpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messageboardpage
      version: v1
  template:
    metadata:
      labels:
        app: messageboardpage
        version: v1
    spec:
      volumes:
        - name: mount-0
          hostPath:
            path: /
            type: ''      
      containers:
      - args:
        - gunicorn
        - messageboardapp.wsgi:application
        - --bind
        - 0.0.0.0:9080
        resources: {}
        volumeMounts:
          - name: mount-0
            mountPath: /static
            subPath: static-volume
        image: messageboard-app-v1
        imagePullPolicy: "IfNotPresent"
        name: web
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
