istio/save/nginx-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels: 
    app: nginx
    service: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 8088
    name: http 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxapp-v2
  labels:
    app: nginx
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      volumes:
        - name: mount-0
          hostPath:
            path: /
            type: ''
      containers:
      - name: nginx
        image: messageboard-nginx-v2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8088
        resources: {}
        volumeMounts:
          - name: mount-0
            mountPath: /static
            subPath: static-volume
      restartPolicy: Always
      serviceAccountName: ""
status: {}
