istio/save/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\bin\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100
  selector:
    io.kompose.service: nginx  
  type: NodePort
  sessionAffinity: None 
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\bin\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\bin\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: nginx
    spec:
      volumes:
        - name: mount-0
          hostPath:
            path: /
            type: ''
      containers:
      - image: messageboard-nginx-v1
        imagePullPolicy: "IfNotPresent"
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        volumeMounts:
          - name: mount-0
            mountPath: /static
            subPath: static-volume
      restartPolicy: Always
      serviceAccountName: ""
status: {}
