istio/save/web-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\bin\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\bin\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\bin\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      volumes:
        - name: mount-0
          hostPath:
            path: /
            type: ''
      containers:
      - args:
        - gunicorn
        - messageboardapp.wsgi:application
        - --bind
        - 0.0.0.0:8000
        resources: {}
        volumeMounts:
          - name: mount-0
            mountPath: /static
            subPath: static-volume
        image: messageboard-app-v1
        imagePullPolicy: "IfNotPresent"
        name: web
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
