istio/save/messageboard-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: messageboardapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: messageboardapp
spec:
  hosts:
  - "*"
  gateways:
  - messageboardapp-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static
    - uri:
        exact: /admin/login
    - uri:
        exact: /admin/logout
    route:
    - destination:
        host: messageboardpage
        port:
          number: 9080
