istio/save/messageboard-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: messageboardapp-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: messageboardapp
spec:
  hosts:
  - "*"
  gateways:
  - messageboardapp-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /static/
    - uri:
        exact: /admin/
    - uri:
        exact: /admin/login/
    - uri:
        prefix: /admin/logout/
    route:
    - destination:
        host: messageboardapp
        port:
          number: 8088
